--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,12 @@ dependencies = [
     "soundfile>=0.12.1",
     "numpy>=1.24.0",
     "moviepy>=1.0.3",
-    "pillow>=9.0.0"
+    "pillow>=9.0.0",
+    "fastapi>=0.104.1",
+    "uvicorn>=0.23.2",
+    "python-multipart>=0.0.6",
+    "jinja2>=3.1.2",
+    "aiofiles>=23.2.1"
 ]
 
 [project.optional-dependencies]
@@ -60,8 +65,9 @@ disallow_untyped_defs = true
 disallow_incomplete_defs = true
 
 [tool.setuptools]
-packages = ["beat_detection", "beat_detection.core", "beat_detection.utils", "beat_detection.cli"]
+packages = ["beat_detection", "beat_detection.core", "beat_detection.utils", "beat_detection.cli", "web_app"]
 
 [project.scripts]
 detect-beats = "beat_detection.cli.detect_beats:main"
 generate-videos = "beat_detection.cli.generate_videos:main"
+beat-webapp = "web_app.app:main"
