--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,9 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=7.4.0",
+    "pytest-asyncio>=0.21.1",
+    "pytest-cov>=4.1.0",
+    "httpx>=0.25.0",
     "black>=23.7.0",
     "ruff>=0.0.285",
     "mypy>=1.5.1",
@@ -44,15 +47,27 @@ dev = [
 line-length = 88
 target-version = ["py312"]
 
-[tool.ruff]
+[tool.ruff.lint]
+# Enable specific rules
+select = [
+    "E",  # pycodestyle errors
+    "F",  # pyflakes
+    "I",  # isort
+    "D",  # pydocstyle
+]
+
+# Disable specific rules
+ignore = [
+    "D100",  # Missing docstring in public module
+    "D104",  # Missing docstring in public package
+    "D107",  # Missing docstring in __init__
+    "D203",  # 1 blank line required before class docstring
+    "D213",  # Multi-line docstring summary should start at the second line
+]
+
+# Line length configuration
 line-length = 88
 target-version = "py312"
-select = ["E", "F", "I", "D"]
-ignore = ["D100", "D104", "D107"]
-
-[tool.ruff.lint]
-select = ["E", "F", "I", "D"]
-ignore = ["D100", "D104", "D107"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
@@ -71,3 +86,15 @@ packages = ["beat_detection", "beat_detection.core", "beat_detection.utils", "be
 detect-beats = "beat_detection.cli.detect_beats:main"
 generate-videos = "beat_detection.cli.generate_videos:main"
 beat-webapp = "web_app.app:main"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+testpaths = ["web_app/test_app.py"]
+python_files = ["test_*.py"]
+python_functions = ["test_*"]
+addopts = "-v --cov=web_app --cov-report=term-missing"
+
+[dependency-groups]
+dev = [
+    "ruff>=0.9.10",
+]
