--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,10 @@ dev = [
 line-length = 88
 target-version = ["py312"]
 
+[tool.ruff]
+line-length = 88
+target-version = "py312"
+
 [tool.ruff.lint]
 # Enable specific rules
 select = [
@@ -64,10 +68,6 @@ ignore = [
     "D203",  # 1 blank line required before class docstring
     "D213",  # Multi-line docstring summary should start at the second line
 ]
-
-# Line length configuration
-line-length = 88
-target-version = "py312"
 
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
