--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,6 @@ target-version = "py312"
 select = [
     "E",  # pycodestyle errors
     "F",  # pyflakes
-    "I",  # isort
     "D",  # pydocstyle
 ]
 
@@ -67,6 +66,7 @@ ignore = [
     "D107",  # Missing docstring in __init__
     "D203",  # 1 blank line required before class docstring
     "D213",  # Multi-line docstring summary should start at the second line
+    "D401",  # First line of docstring should be in imperative mood
 ]
 
 [tool.ruff.lint.pydocstyle]
