--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,5 +45,5 @@ profile = "black"
 line_length = 88
 
 [tool.pytest.ini_options]
-testpaths = ["tests"]
+testpaths = ["web_app", "beat_detection"]
 python_files = "test_*.py"
