--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,11 @@ dependencies = [
     "pyjwt>=2.3.0",
     "madmom @ git+https://github.com/CPJKU/madmom.git",
     "tqdm>=4.64.0",
+    "Pillow>=10.0.0",
 ]
+
+[project.system-dependencies]
+ffmpeg = ">=4.2.0"
 
 [project.optional-dependencies]
 dev = [
