--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "madmom @ git+https://github.com/CPJKU/madmom.git",
     "tqdm>=4.64.0",
     "Pillow>=10.0.0",
+    "moviepy>=1.0.3",
 ]
 
 [project.optional-dependencies]
