--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ dependencies = [
     "tqdm>=4.64.0",
     "Pillow>=10.0.0",
     "moviepy>=2.1.2",
+    "bcrypt>=4.0.1",
+    "python-jose>=3.3.0",
 ]
 
 [project.optional-dependencies]
