--- a/web_app/config/config.json.example
+++ b/web_app/config/config.json.example
@@ -5,7 +5,7 @@
         "debug": false,
         "allowed_hosts": ["localhost", "127.0.0.1"]
     },
-    "files": {
+    "storage": {
         "upload_dir": "web_app/uploads",
         "max_upload_size_mb": 50,
         "allowed_extensions": [".mp3", ".wav", ".flac", ".m4a", ".ogg"]
