--- a/supervisor.beats.conf.example
+++ b/supervisor.beats.conf.example
@@ -1,7 +1,7 @@
 [program:beats_web]
-command=/home/admin/beat_counter/.venv/bin/uvicorn web_app.asgi:app --host 0.0.0.0 --port 8000
+command=/home/admin/beat_counter/.venv/bin/uvicorn web_app.asgi:app --host 127.0.0.1 --port 8000
 directory=/home/admin/beat_counter
-user=admin
+user=www-data
 autostart=true
 autorestart=true
 stderr_logfile=/home/admin/beat_counter/logs/web.err.log
@@ -9,9 +9,9 @@ stdout_logfile=/home/admin/beat_counter/logs/web.out.log
 environment=PYTHONPATH="/home/admin/beat_counter",BEAT_COUNTER_APP_DIR="/home/admin/beat_counter"
 
 [program:beats_celery]
-command=/home/admin/beat_counter/.venv/bin/celery -A web_app.celery_app worker --loglevel=info
+command=/home/admin/beat_counter/.venv/bin/celery -A web_app.celery_app worker -Q beat_detection,video_generation --loglevel=info
 directory=/home/admin/beat_counter
-user=admin
+user=www-data
 autostart=true
 autorestart=true
 stderr_logfile=/home/admin/beat_counter/logs/celery.err.log
