--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,11 +28,14 @@ dependencies = [
     "moviepy>=2.1.2",
     "bcrypt>=4.0.1",
     "python-jose>=3.3.0",
+    "numpy>=1.21.0",
+    "pydub>=0.25.1"
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=6.0.0",
+    "pytest-asyncio>=0.21.0",
     "black>=21.5b2",
     "flake8>=3.9.2",
     "isort>=5.9.1"
@@ -57,3 +60,4 @@ line_length = 88
 [tool.pytest.ini_options]
 testpaths = ["web_app", "beat_detection"]
 python_files = "test_*.py"
+asyncio_mode = "auto"
