--- a/nginx_beats_app.conf.example
+++ b/nginx_beats_app.conf.example
@@ -3,7 +3,7 @@ root@dev:/home/admin# vi /etc/nginx/sites-available/beats-app.conf
 root@dev:/home/admin# cat /etc/nginx/sites-available/beats-app.conf 
 server { 
     listen 80;
-    server_name 155.133.129.160;
+    server_name xvm-129-160.dc3.ghst.net;
 
     location / { 
         proxy_pass http://127.0.0.1:8000;
