--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,3 +61,7 @@ line_length = 88
 testpaths = ["web_app", "beat_detection"]
 python_files = "test_*.py"
 asyncio_mode = "auto"
+# Logging configuration
+# log_cli = true
+# log_cli_level = "INFO"
+# log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s:%(lineno)d %(message)s"
