--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,6 +67,9 @@ jobs:
         python -c "import torch; print(f'PyTorch version: {torch.__version__}')" || echo "PyTorch is missing - needed for beat_this detector"
         if python -c "import beat_this" 2>/dev/null; then
           echo "beat_this module is available"
+          # Try to verify beat_this can be imported and contains expected components
+          python -c "import beat_this; print(f'beat_this has the following attributes: {dir(beat_this)}')"
+          python -c "from beat_this import BeatThis; print('BeatThis class is available')" || echo "BeatThis class not found in beat_this module"
         else
           echo "beat_this module is missing - needed for beat_this detector tests"
         fi
@@ -74,7 +77,37 @@ jobs:
         echo "=== Test paths verification ==="
         ls -la tests/
         ls -la beat_detection/core/ | grep test
-       
+        
+        echo "=== Test file lookup ==="
+        echo "Looking for test audio files..."
+        find . -name "*.mp3" -type f | grep -i test
+        
+        echo "=== Beat This Detector Test ==="
+        # Test importing and creating the detector
+        python -c "from beat_detection.core.factory import get_beat_detector; detector = get_beat_detector('beat_this'); print(f'Detector: {detector}, has detect_beats: {hasattr(detector, \"detect_beats\")}'); print(f'Detector dir: {dir(detector)}')"
+        
+        # Find and test with first mp3 file
+        TEST_MP3=$(find . -name "*.mp3" -type f | head -n 1)
+        if [ -n "$TEST_MP3" ]; then
+          echo "=== Testing detector with $TEST_MP3 ==="
+          python -c "from beat_detection.core.factory import get_beat_detector; detector = get_beat_detector('beat_this'); result = detector.detect_beats('$TEST_MP3'); print(f'Result type: {type(result)}, has timestamps: {hasattr(result, \"timestamps\")}'); print(f'Timestamps shape: {result.timestamps.shape if hasattr(result, \"timestamps\") else \"N/A\"}')" || echo "ERROR: Failed to run detector with test file"
+        fi
+        
+        echo "=== Looking at the test file ==="
+        cat tests/test_beat_this.py | head -n 60
+        
+        echo "=== Looking at beat_this_detector implementation ==="
+        cat beat_detection/core/beat_this_detector.py | head -n 40
+        
+        echo "=== Examining beat_this module ==="
+        python -c "import beat_this; print(f'beat_this.__file__: {beat_this.__file__}'); print(f'beat_this contents: {dir(beat_this)}')" || echo "ERROR: Failed to examine beat_this module"
+        
+        echo "=== Examining sys.path ==="
+        python -c "import sys; print(f'sys.path: {sys.path}')"
+        
+        echo "=== Running dedicated diagnostic test ==="
+        python -m pytest tests/test_beat_this_diagnostic.py -v
+        
     - name: Run tests
       run: |
         source .venv/bin/activate
