--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -106,7 +106,7 @@ jobs:
         python -c "import sys; print(f'sys.path: {sys.path}')"
         
         echo "=== Running dedicated diagnostic test ==="
-        pytest -m slow -v -s tests/test_beat_this_diagnostic.py -v
+        python -m pytest tests/test_beat_this_diagnostic.py -v -s --override-ini="addopts="
         
     - name: Run tests
       run: |
