--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "aiohttp>=3.11.18",
     "requests>=2.32.3",
     "torch>=2.0.0",
+    "pyyaml>=6.0.2",
 ]
 
 [project.optional-dependencies]
