--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,8 @@ dependencies = [
     "requests>=2.32.3",
     "torch>=2.0.0",
     "pyyaml>=6.0.2",
+    "pydub>=0.25.1",
+    "httpx>=0.24.0",
 ]
 
 [project.optional-dependencies]
