--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ name = "beat-detection-app"
 version = "0.1.0"
 description = "Web application for audio beat detection and visualization"
 readme = "README.md"
-requires-python = ">=3.11"
+# Python 3.13+ is excluded because audioop was removed from the standard library, breaking pydub compatibility
+requires-python = ">=3.11,<3.13"
 license = {text = "MIT"}
 authors = [
     {name = "Beat Detection App Team"}
@@ -37,6 +38,7 @@ dependencies = [
     "pyyaml>=6.0.2",
     "pydub>=0.25.1",
     "httpx>=0.24.0",
+    
 ]
 
 [project.optional-dependencies]
