--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
     "moviepy>=2.1.2",
     "bcrypt>=4.0.1",
     "python-jose>=3.3.0",
-    "numpy>=1.21.0",
+    "numpy>=1.21.0,<2.0",
     "pydub>=0.25.1",
     "fsspec>=2025.3.2",
     "aiohttp>=3.11.18",
