trying a fix for the numpy problem

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,20 +23,19 @@ dependencies = [
     "celery>=5.2.0",
     "redis>=4.0.0",
     "pyjwt>=2.3.0",
-    "madmom @ git+https://github.com/CPJKU/madmom.git",
+    "madmom @ git+https://github.com/chadawagner/madmom.git@868e004eb3e36f4359d11458e5849f9d7e52b644", # Temporary fix, see https://github.com/CPJKU/madmom/pull/548
     "tqdm>=4.64.0",
     "Pillow>=10.0.0",
     "moviepy>=2.1.2",
     "bcrypt>=4.0.1",
     "python-jose>=3.3.0",
-    "numpy>=1.21.0,<2.0",
+    "numpy>=1.21.0",
     "pydub>=0.25.1",
     "fsspec>=2025.3.2",
     "aiohttp>=3.11.18",
     "requests>=2.32.3",
     "torch>=2.0.0",
     "pyyaml>=6.0.2",
-    "pydub>=0.25.1",
     "httpx>=0.24.0",
     "pytest>=6.0.0",
     "pytest-asyncio>=0.21.0",
