--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "beat-detection-app"
+name = "beat-counter-app"
 version = "0.1.0"
 description = "Web application for audio beat detection and visualization"
 readme = "README.md"
